--- a/app/src/main/res/layout/fragment_fragment_task.xml
+++ b/app/src/main/res/layout/fragment_fragment_task.xml
@@ -10,6 +10,20 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:id="@+id/recycleView_task"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+
+
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/colorPrimary"
+
+        style="?android:attr/progressBarStyle"
+        android:layout_marginTop="400dp"
+        android:layout_gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
