--- a/app/src/main/res/layout/dialog_mytask.xml
+++ b/app/src/main/res/layout/dialog_mytask.xml
@@ -118,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Status"
+            android:text="Description"
             android:layout_marginLeft="10dp"
             android:layout_weight="2"
             android:textSize="18sp"
@@ -129,7 +129,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:id="@+id/dialogue_myTask_Userid"
+            android:id="@+id/dialogue_myTask_description"
             android:text="1"
             android:layout_marginRight="10dp"
             android:gravity="end"
