--- a/app/src/main/res/layout/fragment_fragment_task.xml
+++ b/app/src/main/res/layout/fragment_fragment_task.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_marginBottom="2dp"
@@ -15,12 +15,14 @@
     <ProgressBar
         android:id="@+id/progressBar"
         android:indeterminate="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
         android:indeterminateTintMode="src_atop"
         android:indeterminateTint="@color/colorPrimary"
         style="?android:attr/progressBarStyle"
-        android:layout_marginTop="400dp"
         android:layout_gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-</LinearLayout>
+</RelativeLayout>
