--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,9 +12,9 @@
         <menu>
 
             <item
-                android:id="@+id/menu_profile"
-                android:icon="@drawable/icon_profile"
-                android:title="Profile"
+                android:id="@+id/menu_feedback"
+                android:icon="@drawable/icon_feedback"
+                android:title="Feedback"
                 app:showAsAction="never"/>
 
             <item
@@ -25,7 +25,7 @@
             <item
                 android:id="@+id/menu_voice_help"
                 android:title="Voice Help"
-                android:icon="@drawable/icon_help"
+                android:icon="@drawable/icon_voicehelp"
                 app:showAsAction="never"/>
 
             <item
