--- a/app/src/main/res/layout/fragment_fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_fragment_profile.xml
@@ -9,150 +9,270 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp"
     android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.main.PlaceholderFragment"
     >
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:background="@drawable/background"
+    android:orientation="vertical"
+    android:layout_height="250dp">
+    <ImageView
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:src="@drawable/pp"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:id="@+id/profile_back"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="USER PROFILE"
+        android:id="@+id/jn"
+        android:textColor="@color/BlackText"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="35sp"
+        />
+</LinearLayout>
 
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:textSize="25sp"
+        android:text="Personal Information"
+        />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
 
-        <TextView
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="serif-monospace"
-            android:gravity="center_horizontal"
-            android:text="PROFILE"
-            android:textColor="@color/colorPrimary"
-            android:textSize="60sp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/profile_tv_username_heading"
+                android:layout_width="125dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:paddingStart="4dp"
+                android:text="User Name :"
+                android:background="#D2D8F8"
+                android:textColor="#000"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+            <EditText
+                android:id="@+id/profile_tv_username"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:padding="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="#D9E8F5"
+                android:text=""
+                android:textColor="@color/BlackText"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
-    <TextView
-        android:id="@+id/profile_tv_username_heading"
+
+    </androidx.cardview.widget.CardView>
+
+
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:gravity="center_horizontal"
-        android:text="User Name"
-        android:textColor="#000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:layout_marginTop="10dp"
+        >
 
-        <EditText
-            android:id="@+id/profile_tv_username"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:enabled="false"
-            android:gravity="center"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/round_tasks"
-            android:text="Ehtisham"
-            android:textColor="@color/BlackText"
-            android:textSize="25dp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/profile_tv_useremail_heading"
+                android:layout_width="125dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:paddingStart="4dp"
+                android:text="Email       :"
+                android:background="#D2D8F8"
+                android:textColor="#000"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+            <EditText
+                android:id="@+id/profile_tv_email"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:gravity="center"
+                android:layout_weight="3"
 
-    <TextView
-        android:id="@+id/profile_tv_useremail_heading"
+                android:padding="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="#D9E8F5"
+                android:text=""
+                android:textColor="@color/BlackText"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_marginTop="13dp"
+        app:cardBackgroundColor="#858484"
+        />
+
+
+
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:gravity="center_horizontal"
-        android:text="Email"
-        android:textColor="#000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:layout_marginTop="10dp"
+        >
 
-    <EditText
-        android:id="@+id/profile_tv_email"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
-        android:textColor="@color/BlackText"
-        android:textAlignment="center"
-        android:enabled="false"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/round_tasks"
-        android:gravity="fill"
-        android:text="  ehtishamhafeez37@gmail.com"
-        android:textSize="20dp" />
-
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:gravity="center_horizontal"
-        android:text="Name"
-        android:textColor="#000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/profile_tv_name"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/round_tasks"
-        android:enabled="false"
-        android:gravity="fill"
-        android:textAlignment="center"
-        android:text="  Ehtisham Hafeez"
-        android:textColor="@color/BlackText"
-        android:textSize="20dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="125dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:paddingStart="4dp"
+                android:text="Name      :"
+                android:background="#D2D8F8"
+                android:textColor="#000"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+            <EditText
+                android:id="@+id/profile_tv_name"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:padding="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="#D9E8F5"
+                android:text=""
+                android:textColor="@color/BlackText"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
 
-    <TextView
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="10dp"
+        >
 
-        android:gravity="center_horizontal"
-        android:text="Phone Number"
-        android:textColor="#000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="125dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:paddingStart="4dp"
+                android:text="Phone No :"
+                android:background="#D2D8F8"
+                android:textColor="#000"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+            <EditText
+                android:id="@+id/profile_tv_phone"
+                android:text=""
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:padding="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="#D9E8F5"
+                android:textColor="@color/BlackText"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
-    <EditText
-        android:id="@+id/profile_tv_phone"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/pr"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:textAlignment="center"
-        android:enabled="false"
-        android:textColor="@color/BlackText"
-        android:background="@drawable/round_tasks"
-        android:gravity="fill"
-        android:text="  0303-6436506"
-        android:textSize="20dp" />
 
-    <TextView
+    </androidx.cardview.widget.CardView>
+
+
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:gravity="center_horizontal"
-        android:text="Address"
-        android:textColor="#000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+        android:layout_marginTop="10dp"
+        >
 
-    <EditText
-        android:id="@+id/profile_tv_adress"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@+id/pr"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:textAlignment="center"
-        android:enabled="false"
-        android:textColor="@color/BlackText"
-        android:background="@drawable/round_tasks"
-        android:text="Address"
-        android:textSize="20dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="125dp"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:paddingStart="4dp"
+                android:text="Adress    :"
+                android:background="#D2D8F8"
+                android:textColor="#000"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+            <EditText
+                android:id="@+id/profile_tv_adress"
+                android:text=""
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:gravity="center"
+                android:layout_weight="3"
+                android:padding="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:background="#D9E8F5"
+                android:textColor="@color/BlackText"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+    </androidx.cardview.widget.CardView>
+
+
 
     <Button
         android:id="@+id/profile_tv_changebtn"
@@ -161,8 +281,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
         android:background="@drawable/round_button"
-        android:fontFamily="monospace"
         android:text="Edit Profile"
+        android:textStyle="bold"
         android:textColor="@color/BlackText"
         android:textSize="20sp" />
 
@@ -175,7 +295,7 @@
         android:enabled="false"
         android:layout_marginTop="50dp"
         android:background="@drawable/round_button"
-        android:fontFamily="monospace"
+        android:textStyle="bold"
         android:text="Save Profile"
         android:textColor="@color/BlackText"
         android:textSize="20sp" />
