--- a/app/src/main/res/layout/fragment_fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_fragment_profile.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#DAD5D5"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.main.PlaceholderFragment"
     >
@@ -62,6 +64,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+
+            android:background="#E7E5E5"
             android:layout_height="match_parent"
             android:orientation="horizontal">
             <TextView
@@ -106,6 +110,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
+            android:background="#E7E5E5"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/profile_tv_useremail_heading"
@@ -157,6 +163,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_marginTop="5dp"
+
+            android:background="#E7E5E5"
             android:layout_height="match_parent"
             android:orientation="horizontal">
             <TextView
@@ -199,7 +208,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
+            android:background="#E7E5E5"
             android:orientation="horizontal">
+
             <TextView
                 android:layout_width="125dp"
                 android:layout_height="match_parent"
@@ -241,6 +253,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
+            android:background="#E7E5E5"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="125dp"
