--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,15 +12,15 @@
         <menu>
 
             <item
-                android:id="@+id/menu_feedback"
-                android:icon="@drawable/icon_feedback"
-                android:title="Feedback"
+                android:id="@+id/menu_translate"
+                android:icon="@drawable/icon_translate"
+                android:title="Language Translator"
                 app:showAsAction="never"/>
 
             <item
-                android:id="@+id/menu_help"
-                android:title="Help"
-                android:icon="@drawable/icon_help"
+                android:id="@+id/menu_feedback"
+                android:title="FeedBack"
+                android:icon="@drawable/icon_feedback"
                 app:showAsAction="never"/>
             <item
                 android:id="@+id/menu_voice_help"
