--- a/app/src/main/res/layout/activity_voicehelp.xml
+++ b/app/src/main/res/layout/activity_voicehelp.xml
@@ -5,18 +5,21 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#B6B4B4"
+    android:layout_margin="20dp"
     android:layout_gravity="center"
     tools:context=".voicehelp">
     <Button
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:textSize="30sp"
+        android:layout_marginTop="40dp"
         android:text="Play"
         android:id="@+id/playbtn"
         android:layout_gravity="center_horizontal"
         android:onClick="playvoice"
         android:textColor="@color/White"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/round_button"
 
         />
     <Button
@@ -29,7 +32,7 @@
         android:layout_gravity="center_horizontal"
         android:onClick="pausevoice"
         android:textColor="@color/White"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/round_button"
 
         />
     <Button
@@ -42,13 +45,14 @@
         android:layout_gravity="center_horizontal"
         android:onClick="stopvoice"
         android:textColor="@color/White"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/round_button"
 
         />
     <Button
         android:layout_width="250dp"
         android:layout_height="40dp"
 
+        android:layout_marginBottom="40dp"
         android:layout_marginTop="20dp"
         android:textSize="30sp"
         android:text="Get Back"
@@ -56,7 +60,7 @@
         android:id="@+id/getback"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/White"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/round_button"
 
         />
 
