--- a/app/src/main/res/layout/activity_menu_feedback.xml
+++ b/app/src/main/res/layout/activity_menu_feedback.xml
@@ -1,24 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<LinearLayout
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    >
-    <LinearLayout
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_margin="30sp"
+    android:background="#C4B6B6"
 
+    android:layout_gravity="center"
+    tools:context=".MenuFeedback"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".MenuFeedback">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginRight="40dp"
+        android:text="Feedback :"
+        android:textStyle="bold"
+        android:textColor="@color/BlueButtons"
+        android:textSize="26dp"
+        android:layout_marginLeft="40dp"/>
 
-        <EditText
+
+    <EditText
             android:layout_width="match_parent"
             android:id="@+id/feedback_et_text"
             android:layout_height="200dp"
-            android:layout_margin="10dp"
+            android:layout_marginBottom="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
             android:background="@drawable/round_tasks"
             android:hint="Please enter your feedback here..."
             android:gravity="left"
@@ -32,9 +46,9 @@
             android:layout_height="wrap_content"
             android:text="Submit Feedback"
             android:textSize="16dp"
+            android:layout_marginBottom="40dp"
             android:textStyle="bold"
             android:textColor="@color/ButtonText"
             />
 
     </LinearLayout>
-</ScrollView>
