--- a/app/src/main/res/layout/activity_registration_screen.xml
+++ b/app/src/main/res/layout/activity_registration_screen.xml
@@ -77,6 +77,8 @@
         android:textColor="@color/ButtonText"
         android:textSize="16dp"
         android:textStyle="bold"
+        android:visibility="gone"
+        android:enabled="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
